16 Mar 2023
- Pengurusan Cuti 
	-> Update 2 jenis weekends. Kedah (Jumaat & Sabtu) dan Perlis (Sabtu dan Ahad).
- Pengurusan Pekerja
	-> Report - Update PDF & Excel Feature for PPK and Wilayah.
	-> Form 
		-> Redo and Redesign Create Form.
		-> Butang Tindakan - SweetAlert Confirm Delete.

27 Mar 2023
- Pengurusan Pekerja
	-> Organize back button and success messages into partials.
	-> DB - table ppk and wilayah
		-> add column address and telephone.

28 Mar 2023
- Pengurusan Pekerja
	-> Report - PDF & Excel
		-> Improve the columns appeared on the report.

03 Apr 2023
- Pengurusan Pekerja
	-> DB - table ppk and wilayah
		-> create seeder

10 Apr 2023
- Pengurusan Cuti
	-> Form
		-> Create and Update form

30 Apr 2023
- Pengurusan Pekerja
	-> Butang Tindakan
		-> simplify show, edit and delete buttons
			-> add title.
			-> remove wording (papar, kemaskini, hapus).
- Pengurusan Cuti
	-> Bilangan cuti hari ini, bulan ini dan tahun ini.
	-> Translate English to BM.

02 Mei 2023 - Tuesday
- Side Menu - Directory listing for all access.